docfx/versioned/Spatial2D/0.8.0/ru/concepts/spatial-algorithms.md
# Пространственные алгоритмы

Spatial2D предоставляет алгоритмы генерации равномерно разреженных наборов точек, назначения
расположенных объектов взвешенным сайтам и выбора локальных окрестностей источников влияния. Эти
алгоритмы дополняют [геометрическую модель](geometry-model/index.md): они работают с положениями
и полями, а не вводят новые примитивы фигур.

## Выбор алгоритма

Начните с результата, который нужен приложению:

| Цель | Алгоритм | Основной тип |
|---|---|---|
| Сгенерировать нерегулярные точки с управляемым расстоянием | Выборка дисков Пуассона | <xref:Akeldov.Math.Spatial2D.Sampling.Point.PoissonDisk.PoissonDiskPointSampler> |
| Назначить существующие расположенные объекты взвешенным центрам | Взвешенное разбиение элементов Вороного | <xref:Akeldov.Math.Spatial2D.Partitioning.Voronoi.VoronoiItemPartitioner`1> |
| Выбрать локальный треугольник или элемент оболочки около точки запроса | Отсечение источников по Делоне | <xref:Akeldov.Math.Spatial2D.Fields.DelaunayCuller`1> |
| Исключить точечные источники, скрытые за границами полуплоскостей более близких источников | Отсечение полуплоскостями | <xref:Akeldov.Math.Spatial2D.Fields.HalfPlaneCuller`1> |

Выборка дисков Пуассона создаёт новые положения. Разбиение Вороного группирует объекты, у
которых положения уже есть. Отсекатели влияния возвращают временное локальное подмножество для
одной выборки поля и не перераспределяют исходную коллекцию навсегда.

<a id="генерация-точек-дисками-пуассона"></a>
<a id="изменение-расстояния-с-помощью-поля"></a>

Генерация точек с постоянным и адаптивным расстоянием описана на странице
[Семплер Пуассона](samplers/poisson-disk.md) в разделе [Семплеры](samplers/index.md).

## Разбиение элементов по взвешенным сайтам Вороного

`VoronoiItemPartitioner<TItem>` назначает каждый элемент `IHasPosition2D` одному настроенному
`Site`. Это семантический разделитель элементов: он возвращает группы объектов, а не
многоугольную геометрию ячеек Вороного.

`PointXY` сам реализует `IHasPosition2D`, поэтому точки можно разбивать напрямую:

```csharp
using System.Collections.Generic;
using Akeldov.Math.Spatial2D;
using Akeldov.Math.Spatial2D.Partitioning.Voronoi;

var sites = new[]
{
    new Site(new PointXY(0f, 0f), weight: 1f),
    new Site(new PointXY(10f, 0f), weight: 2f)
};

var items = new[]
{
    new PointXY(1f, 0f),
    new PointXY(4f, 0f),
    new PointXY(8f, 0f)
};

var partitioner = new VoronoiItemPartitioner<PointXY>(
    sites,
    EmptyCellPolicy.LeaveAsIs);

IReadOnlyList<VoronoiItemPartition<PointXY>> partitions =
    partitioner.Partition(items);
```

В стороне от точного положения сайта конечные сайты с положительным весом сравниваются по
квадрату расстояния, делённому на квадрат веса. Поэтому увеличение веса позволяет сайту
получать элементы с большего расстояния.

Особые случаи веса заданы явно:

- сайт в положении элемента побеждает до сравнения взвешенных расстояний;
- сайт с нулевым весом получает только совпадающие с ним элементы;
- при наличии сайтов с положительным бесконечным весом для несовпадающего элемента выбирается
  ближайший из них;
- как минимум один настроенный сайт должен иметь положительный вес.

Положения сайтов и элементов должны быть конечными. Коллекция элементов должна быть непустой и
не содержать `null`.

## Обработка пустых разделов Вороного

Некоторые сайты могут не получить элементов.
<xref:Akeldov.Math.Spatial2D.Partitioning.Voronoi.EmptyCellPolicy> определяет обработку таких
случаев в конечном результате:

| Политика | Поведение |
|---|---|
| `ThrowException` | Завершает операцию ошибкой при наличии пустого раздела; используется по умолчанию. |
| `Exclude` | Удаляет пустые разделы из семантического результата. |
| `LeaveAsIs` | Сохраняет по одному разделу на настроенный сайт, включая пустые. |

Используйте `LeaveAsIs`, если индексы результата должны соответствовать индексам сайтов.
`Exclude` подходит, когда важны только заполненные группы. `ThrowException` нужен, когда каждый
последующий раздел обязан содержать хотя бы один элемент.

Возвращаемый список разделов доступен только для чтения, поскольку его размер и связь с сайтами
являются частью результата алгоритма. Коллекция `VoronoiItemPartition<TItem>.Items` также
представляет скопированную структуру только для чтения.

## Релаксация сайтов к центроидам элементов

Трёхаргументный конструктор разделителя принимает `relaxationIterations`. После каждого
назначения заполненный сайт перемещается в центроид своих элементов с сохранением веса, затем
элементы разбиваются снова. Пустые сайты сохраняют прежние положения.

```csharp
var relaxedPartitioner = new VoronoiItemPartitioner<PointXY>(
    sites,
    relaxationIterations: 2,
    emptyCellPolicy: EmptyCellPolicy.LeaveAsIs);

IReadOnlyList<VoronoiItemPartition<PointXY>> relaxed =
    relaxedPartitioner.Partition(items);
```

Релаксация балансирует сайты вокруг переданных дискретных элементов и не вычисляет центроиды
непрерывных многоугольных ячеек. Поэтому сайты в конечных разделах могут отличаться от исходных
настроенных положений.

## Выбор локальных окрестностей поля

Отсекатели влияния решают другую задачу, чем разбиение Вороного: для каждой точки запроса они
возвращают точечные источники, которые должна учитывать стратегия выборки.

`DelaunayCuller<TPointSource>` требует как минимум три источника с уникальными положениями. Для
неколлинеарных входов он строит триангуляцию. Запрос внутри оболочки получает три источника
содержащего треугольника, а запрос снаружи — ближайшую вершину оболочки или два конца ближайшего
ребра. Для коллинеарных входов используется явная запасная стратегия.

`HalfPlaneCuller<TPointSource>` принимает один или несколько источников. Он обрабатывает их от
ближних к дальним и удаляет скрытые за перпендикулярными границами полуплоскостей, созданными уже
выбранными источниками.

Оба отсекателя возвращают новый изменяемый непустой список, принадлежащий вызывающему коду. Они
предназначены для передачи точечным полям влияния; полный конвейер описан на странице
[«Поля»](fields.md).

## Объединение алгоритмов в рабочий процесс

Алгоритмы могут передавать результаты друг другу, не образуя жёсткой связи:

1. Сгенерируйте кандидаты сайтов выборкой дисков Пуассона.
2. Назначьте выбранным положениям веса или значения поля.
3. Распределите существующие объекты между сайтами взвешенным разбиением Вороного.
4. Выполните выборку или растеризацию результата для визуализации и дальнейшей обработки.

Используйте одну мировую единицу для всех линейных величин. Применяйте фиксированное зерно
случайности, если процедурный конвейер должен быть воспроизводимым, и явно выбирайте поведение
пустых ячеек, когда следующие шаги зависят от размера результата.

Практические примеры:

- [Сгенерировать точки дисками Пуассона](../how-to-guides/sampling/generate-poisson-disk-points.md)
- [Разбить элементы по взвешенным сайтам Вороного](../how-to-guides/partitioning/partition-items-with-weighted-voronoi.md)
- [Учебник по процедурному разбиению пространства](../tutorials/procedural-space-partitioning/index.md)
- [Растеризация](rasterization.md)
